--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 </head>
 <body>
-<div class= "box_set">ß
+<div class= "box_set">
 
 <figure class= "box1">Header</figure>
 <figure Class= "box2">Nav</figure>
